# docx-html-md-scripts

./: .gitignore  README.md  docx_to_html.ps1  docx_to_html.py  html_to_markdown.py  md_to_docx.py  py_docx_to_html.py  py_html_to_markdown.py  pyproject.toml  requirements.txt  将text文件转化成word文件.md
.dev-logs/: 20250416_doc_to_html.md  20260501_doc_to_html.md  20260505_html_to_markdown.md  20260506_create_pyproject.md  20260507_将0501_0505_分支成果合并到新架构.md  20260513_html_to_md_v2_及与v1差异分析.md  html_to_markdown.md
new/: html_to_md_v2.py
src/docx_md_tools/: __init__.py  docx_to_html.py  html_to_markdown.py  md_to_docx.py  py_docx_to_html.py  py_html_to_markdown.py
test-case/: docx转md用例1-保留自动编码-参考答案.md  docx转md用例2-复杂表格处理-参考答案.md  docx转md用例2-复杂表格处理.html
